// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with minimal props 1`] = `
<div>
  <style />
  <span
    class="manor-button-wrap "
  >
    <style />
    <button
      class="
            manor-rich-text 
            md
            primary
            manor-button 
            
            center
            
          "
      id="test-id"
    >
      
    </button>
  </span>
</div>
`;

exports[`Button renders with props 1`] = `
<div>
  <style />
  <span
    class="manor-button-wrap "
  >
    <style />
    <button
      class="
            manor-rich-text 
            md
            primary
            manor-button 
            onDark
            
            align-right
          "
      disabled=""
      id="test-id"
    >
      <style />
      <div
        class="btn-icon"
      >
        <style />
        <svg
          class=" 
          icon
           
           
        "
          enable-background="0 -4 44 44"
          style="width: 10rem; height: 10rem;"
          version="1.1"
          viewBox="0 -4 44 44"
          x="0px"
          xmlns="http://www.w3.org/2000/svg"
          y="0px"
        >
          <path
            d="M18.704 36.08c-.53 0-1.044-.18-1.459-.51L4.755 24.486a2.092 2.092 0 0 1-.751-1.51 2.043 2.043 0 0 1 .6-1.576l2.278-2.403c.416-.416.98-.65 1.567-.65a2.1 2.1 0 0 1 1.328.464l8.706 7.503L34.848 8.68a2.098 2.098 0 0 1 3.078-.017l2.29 2.29a1.949 1.949 0 0 1 .672 1.41 1.987 1.987 0 0 1-.55 1.526L20.266 35.385a1.989 1.989 0 0 1-1.56.694z"
          />
        </svg>
      </div>
      test content
    </button>
  </span>
</div>
`;
